# ollama-cli

./: .pre-commit-config.yaml  .secrets.baseline  .set_env.sh  README.md  Workspace.code-workspace  justfile  ollama-cli.py  pyproject.toml
scripts/: check_justfile_indent.py  fix_justfile_indent.py
